--- a/Projet-perso/MyProject/MyProject_client-main/package.json
+++ b/Projet-perso/MyProject/MyProject_client-main/package.json
@@ -21,6 +21,9 @@
     "@ngx-translate/core": "^14.0.0",
     "bootstrap": "^5.2.3",
     "bootstrap-icons": "^1.10.3",
+    "cookieconsent": "^3.1.1",
+    "ngx-cookie-service": "^15.0.0",
+    "ngx-cookieconsent": "^4.0.1",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.12.0"
@@ -36,6 +39,7 @@
     "karma-coverage": "~2.2.0",
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.0.0",
+    "mocha": "^10.2.0",
     "typescript": "~4.8.2"
   }
 }
