--- a/Projet-perso/MyProject/MyProject_server-main/package.json
+++ b/Projet-perso/MyProject/MyProject_server-main/package.json
@@ -18,5 +18,8 @@
     "jsonwebtoken": "^9.0.0",
     "mongoose": "^6.8.2",
     "nodemon": "^2.0.20"
+  },
+  "devDependencies": {
+    "mocha": "^10.2.0"
   }
 }
